# godot-test

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CMakeUserPresets.json.win32.example  README  vcpkg-configuration.json  vcpkg.json
build-script/: build_for_android.bat  build_for_win32.bat
cpp-ext/: CMakeLists.txt
cpp-ext/cmake/: UtilityTargets.cmake
cpp-ext/cmake/vcpkg-triplets/: arm-android-api23.cmake  x64-windows-static-v143.cmake  x86-windows-static-v143.cmake
cpp-ext/src/: BasicGameObj.cpp  CMakeLists.txt  Log.cpp  Log.h  LogSink.hpp  RegisterTypes.cpp  RegisterTypes.h  gdexample.cpp  gdexample.h
cpp-ext/src/GDApi/: RegisterTypes.cpp
cpp-ext/src/GDObj/: BasicGameObj.h
cpp-ext/src/gd_api/: RegisterTypes.cpp
cpp-ext/src/gd_obj/: TestCharacter2D.cpp
cpp-ext/src/log/: GDLogSink.hpp  Log.cpp
cpp-ext/src/utils/: DumpHelper.cpp  DumpHelper.h  TypeFormatter.hpp
cppext/: .gitignore  CMakeLists.txt
cppext/cmake/: UtilityTargets.cmake  Windows.MSVC.toolchain.cmake
cppext/src/gd_api/: RegisterTypes.cpp  RegisterTypes.h
cppext/src/gd_obj/: BasicGameNode.cpp  BasicGameNode.h  TestCharacter2D.h
cppext/src/log/: Log.h
cppext/src/utils/: DumpClient.cpp  TypeFormatter.hpp
demo/: .gitignore  example1.gdextension  export_presets.cfg  icon.svg.import  project.godot
demo/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
demo/fonts/: Xolonium-Regular.ttf.import
demo/scene/: HUD.tscn  Main.tscn  Mob.tscn  Player.tscn  node_2d.tscn
demo/script/: GDExample.gd  Main.gd  Mob.gd  Player.gd  hud.gd
